@@ -30,6 +30,15 @@
 #pragma warning(push, 4)
 
 //---------------------------------------------------------------------------
+// CONSTANTS
+//---------------------------------------------------------------------------
+
+// DATABASE_SCHEMA_VERSION
+//
+// This value needs to be incremented with any database schema change
+static char const DATABASE_SCHEMA_VERSION[] = "9";
+
+//---------------------------------------------------------------------------
 // DATA TYPES
 //---------------------------------------------------------------------------
 
